--- a/Box Game/index.css
+++ b/Box Game/index.css
@@ -49,39 +49,42 @@ table {
 
 /**** CSS START ****/
 
-.container
-{
-    border: #ccccc1 solid 2px;
+.container {
+    padding: 10px;
+    border: 1px solid rgba(204, 204, 193, .5);
     height :90vh;
-    width: 90vh;
+    width: 50vw;
     display :grid;
     grid-template-columns: 1fr 1fr 1fr 1fr ;
     grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
-.cell
-{
-    height: 20vh;
-    width: 20vh;
-    border-radius: 5px;
+.cell-container {
+    border-radius: 10px;
     padding: 4px;
     margin: 4px;
+    color : black;
+    text-align: center;
+    transition: all .2s linear;
+}
+
+.cell {
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgba(204, 204, 193, .2);
+    border-radius: 5px;
     color : black;
     text-align: center;
     box-shadow: 0 10px 10px -12px #ccccc1;
     transition: all .2s linear;
 }
 
-.cell:hover{
-  cursor: pointer;
-  height: 17vh;
-  width: 17vh;
-  align-self: center;
-  justify-self: center;
+.cell-container:hover {
+    padding: 10px;
+    cursor: pointer;
 }
 
-.cell-1
-{
+.cell-1 {
     background-color: rgb(77, 182, 172);
 }
 
@@ -101,26 +104,10 @@ table {
     height: 100vh;
 }
 
-.cell:active, .cell:focus{
-  animation-name: cell-animation;
-  animation-duration: 1s;
+
+@media screen and (max-width: 600px) {
+    .container {
+        display: none;
+    }
 }
 
-@keyframes cell-animation {
-  0%{
-    color: transparent;
-  }
-  33%{
-    background-color: #b5e7a0;
-    width: 5rem;
-    color: transparent;
-  }
-  66%{
-    background-color: #ffef96;
-    width: 5rem;
-    color: transparent;
-  }
-  100%{
-    color: transparent;
-  }
-}
