--- a/Box Game/index.css
+++ b/Box Game/index.css
@@ -50,38 +50,40 @@ table {
 /**** CSS START ****/
 
 .container {
-    padding: 10px;
     border: 1px solid rgba(204, 204, 193, .5);
-    height :90vh;
-    width: 50vw;
-    display :grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    height: 90vh;
+    padding: 5px;
+    width: 90vh;
+    max-width: 1300px;
+    max-height: 1300px;
 }
 
 .cell-container {
     border-radius: 10px;
-    padding: 4px;
+    color: black;
     margin: 4px;
-    color : black;
+    padding: 4px;
     text-align: center;
     transition: all .2s linear;
 }
 
 .cell {
-    width: 100%;
-    height: 100%;
     border: 1px solid rgba(204, 204, 193, .2);
     border-radius: 5px;
-    color : black;
-    text-align: center;
     box-shadow: 0 10px 10px -12px #ccccc1;
+    color: black;
+    height: 100%;
+    text-align: center;
     transition: all .2s linear;
+    width: 100%;
 }
 
 .cell-container:hover {
-    padding: 10px;
     cursor: pointer;
+    padding: 10px;
 }
 
 .cell-1 {
@@ -104,10 +106,9 @@ table {
     height: 100vh;
 }
 
-
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     .container {
-        display: none;
+        width: 90vw;
+        height: 90vw;
     }
 }
-
