--- a/Box Game/index.css
+++ b/Box Game/index.css
@@ -50,7 +50,9 @@ table {
 /**** CSS START ****/
 
 .container {
-    border: 1px solid rgba(204, 204, 193, .5);
+   
+    background-color: rgba(38, 50, 56, .5);
+    border-radius: 5px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -105,6 +107,10 @@ table {
 .height-100vh {
     height: 100vh;
 }
+.background-image{
+    background-image: url("resim.jpg");
+    background-size:cover;
+}
 
 @media screen and (max-width: 700px) {
     .container {
@@ -112,3 +118,4 @@ table {
         height: 90vw;
     }
 }
+
