--- a/Box Game/index.css
+++ b/Box Game/index.css
@@ -63,6 +63,8 @@ table {
     max-height: 1300px;
 }
 
+
+
 .cell-container {
     border-radius: 10px;
     color: black;
@@ -71,6 +73,38 @@ table {
     text-align: center;
     transition: all .2s linear;
 }
+.container-1 {
+    margin-left: 17vh;
+    margin-bottom: 50vh;
+    background-color: rgba(38, 50, 56, .5);
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    height: 30vh;
+    padding: 5px;
+    width: 30vh;
+    max-width: 1300px;
+    max-height: 1300px;
+}
+.displays {
+    border: 1px solid rgba(25,25,112, .2);
+    border-radius: 5px;
+    box-shadow: 0 10px 10px -12px #ccccc1;
+    color: black;
+    height: 100%;
+    text-align: center;
+    transition: all .2s linear;
+    width: 100%;
+}
+.cell-container-1 {
+     border-radius: 10px;
+     color: black;
+     margin: 4px;
+     padding: 4px;
+     text-align: center;
+     transition: all .2s linear;
+ }
 
 .cell {
     border: 1px solid rgba(25,25,112, .2);
@@ -82,6 +116,7 @@ table {
     transition: all .2s linear;
     width: 100%;
 }
+
 
 .cell-container:hover {
     cursor: pointer;
