--- a/Box Game/index.css
+++ b/Box Game/index.css
@@ -107,15 +107,29 @@ table {
 .height-100vh {
     height: 100vh;
 }
-.background-image{
-    background-image: url("resim.jpg");
-    background-size:cover;
+.background-animation{
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab,#ffc107);
+    background-size: 400% 400%;
+    animation: gradientBG 15s ease infinite;
 }
+
 
 @media screen and (max-width: 700px) {
     .container {
         width: 90vw;
         height: 90vw;
+    }
+}
+
+@keyframes gradientBG {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
     }
 }
 
